# shapes

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
common/: CMakeLists.txt
common/include/: shape.hpp
common/src/: shape.cpp
plugins/: CMakeLists.txt
plugins/include/: circle.hpp  rectangle.hpp
plugins/src/: circle.cpp  rectangle.cpp
